# xfce-win7-volume-mixer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  volume-mixer-plugin.c  volume-mixer-plugin.desktop
